--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+
     <title>portfolio project</title>
   </head>
   <body>
@@ -32,7 +33,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="images/icon.png"></a>
+        <a class="navbar-brand" href="#top"><img src="images/icon.png"></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -46,16 +47,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">HOME</a>
+              <a class="nav-link" href="#banner">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">ABOUT ME</a>
+              <a class="nav-link" href="#about-me">ABOUT ME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">PROJECTS</a>
+              <a class="nav-link" href="#Projects">PROJECTS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">CONTACT</a>
+              <a class="nav-link" href="#footer">CONTACT</a>
             </li>
           </ul>
         </div>
@@ -140,7 +141,7 @@
   </div>
  </section>
 <!------about me------>
- <section id="about-us">
+ <section id="about-me">
     <div class="title-me">
     <div class="container">
       <div class="title-me">
@@ -176,7 +177,7 @@
                 <div class="card">
                     <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title">oop</h4>
+                      <h1 class="card-name">OOP</h1>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                         <div class="text-center">
                             <a href="#" class="button">Link</a>
@@ -189,7 +190,7 @@
                 <div class="card portfolioContent">
                     <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title">dom</h4>
+                      <h1 class="card-name">DOM</h1>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                         <div class="text-center">
                             <a href="#" class="button">Link</a>
@@ -202,7 +203,7 @@
                 <div class="card portfolioContent">
                     <img class="card-img-top" src="images/portfolioImage3.jpg" alt="Card image" style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title">ts</h4>
+                      <h1 class="card-name">TSI</h1>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                         <div class="text-center">
                             <a href="#" class="button">Link</a>
@@ -217,7 +218,7 @@
                 <div class="card portfolioContent">
                     <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title">api</h4>
+                      <h1 class="card-name">API</h1>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                         <div class="text-center">
                             <a href="#" class="button">Link</a>
@@ -228,12 +229,12 @@
 
             <div class="col-lg-4 mt-4">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/snake game img.png" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="images/snake.png" alt="Card image" style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title">snake game</h4>
-                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                      <h1 class="card-name">snake</h1>
+                        <p class="card-text">i made a snake game using js.</p>
                         <div class="text-center">
-                            <a href="pages/snakegame.html" class="button">play</a>
+                            <a href="snakegame.html" class="button">play</a>
                         </div>
                     </div>
                 </div>
@@ -241,12 +242,12 @@
 
             <div class="col-lg-4 mt-4">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="images/cards.png" alt="Card image" style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title">Blog App</h4>
-                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <h1 class="card-name">Memory Game</h1>
+                        <p class="card-text">i made a Memory Game using js.</p>
                         <div class="text-center">
-                            <a href="#" class="button">Link</a>
+                            <a href="memory.html" class="button">play</a>
                         </div>
                     </div>
                 </div>
@@ -269,34 +270,48 @@
     </div>
   </section>
 
-  <!--footer-->
+<!--footer-->
 <section id="footer">
-    <img src="images/wave2.png" class="footer-img" >
+  <img src="images/wave2.png" class="footer-img" >
+  <div class="container">
+    <div class="row">
+  <div class="cool-md-4 footer-box">
+    <img src="images/icon.png">
+    <p><b>Contact Me</b></p>
+    <p>world  Trad center sdsd sdsdsd</p>
+    <p>world  Trad center sdsd sdsdsd</p>
+    <p>world  Trad center sdsd sdsdsd</p>
+  </div>
   
+ 
+  <div class="cool-md-4 footer-box">
+    <p><b>Email me ☆</b></p>
+   
+    <input type="email" class="form-control" placeholder="Your email">
+   <br>
+    <button type="button" class="button">send</button>
+ 
+  </div>
+  </div>
+  </div>
+  <hr>
+  <div class="footer-copyright">
     <div class="container">
-      <div class="row">
-    <div class="cool-md-4 footer-box">
-      <div class="footer-center">
-      <p><b>Contact Me</b></p>
-      <p>world  Trad center sdsd sdsdsd</p>
-      <p>world  Trad center sdsd sdsdsd</p>
-      <p>world  Trad center sdsd sdsdsd</p>
-    </div>
-    
-   
-    <div class="cool-md-4 footer-box">
-      <p><b>Email me ☆</b></p>
-     
-      <input type="email" class="form-control" placeholder="Your email">
-     <br>
-      <button type="button" class="button">send</button>
-   
+    <div class="row">
+    <div class="col-md-12 text-center">
+    <p>Copyright  © 2023 by Alice Telhami.</p>
     </div>
     </div>
     </div>
-    <hr>
-    <p class="copyright">made by Alice Telhami</p>
     </div>
-  </section>
-  </body>
+  </div>
+</section> 
+
+<!--smooth scroll-->
+<script src="smooth-scroll.js"></script>
+<script>
+	var scroll = new SmoothScroll('a[href*="#"]');
+</script>
+
+</body>
 </html>
