--- a/memory.html
+++ b/memory.html
@@ -47,7 +47,7 @@
   <p class="p-2"> i'm  a web developer, i have a passion in full-stack development, artificial intelligence, Human computer interaction and etc. </p>
  
  
-  <a href="snake.js" class="intro-button">
+  <a href="project2 (memoryGame)/project game 2/memory.html" class="intro-button">
     <button class="button">
       <img src="images/cards.png" class="img-2" >
       project</button>
