--- a/snakepage.html
+++ b/snakepage.html
@@ -24,11 +24,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
-  <script src="snake.js"></script>
+
     <title>SnakeGame</title>
   </head>
 
   <body>
+    <script src="snake.js"></script>
      <!---header---->
     <header id="nav-bar">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -47,7 +48,7 @@
   <p class="p-2"> i'm  a web developer, i have a passion in full-stack development, artificial intelligence, Human computer interaction and etc. </p>
  
  
-  <a href="snake.js" class="intro-button">
+  <a href="project1(snakegame)/snake.html" class="intro-button">
     <button class="button" onclick="this" value="">
       <img src="images/snake.png" class="img-2" >
       project</button>
