--- a/index.html
+++ b/index.html
@@ -216,12 +216,12 @@
         <div class="row">
             <div class="col-lg-4 mt-4">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="images/book.png" alt="Card image" style="width:100%">
                     <div class="card-body">
-                      <h1 class="card-name">API</h1>
+                      <h1 class="card-name">Google Book API</h1>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                         <div class="text-center">
-                            <a href="#" class="button">Link</a>
+                            <a href="bookspage.html" class="button">open</a>
                         </div>
                     </div>
                 </div>
