--- a/index.html
+++ b/index.html
@@ -188,12 +188,12 @@
 
             <div class="col-lg-4 mt-4">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="images/list.png" alt="Card image" style="width:100%">
                     <div class="card-body">
-                      <h1 class="card-name">DOM</h1>
+                      <h1 class="card-name">Task List DOM</h1>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                         <div class="text-center">
-                            <a href="#" class="button">Link</a>
+                            <a href="todopage.html" class="button">Link</a>
                         </div>
                     </div>
                 </div>
@@ -234,7 +234,7 @@
                       <h1 class="card-name">snake</h1>
                         <p class="card-text">i made a snake game using js.</p>
                         <div class="text-center">
-                            <a href="snakegame.html" class="button">play</a>
+                            <a href="sna" class="button">play</a>
                         </div>
                     </div>
                 </div>
@@ -247,7 +247,7 @@
                         <h1 class="card-name">Memory Game</h1>
                         <p class="card-text">i made a Memory Game using js.</p>
                         <div class="text-center">
-                            <a href="memory.html" class="button">play</a>
+                            <a href="memorypage.html" class="button">play</a>
                         </div>
                     </div>
                 </div>
