--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
       <p>
         source front-end development framework for the creation of websites and web apps.</p>
         </div>
-        <!------whatever------>
+        <!------typeScript------>
         <div class="col-md-4 services">
-          <img src="images/bootstap.png" class="services-img">
+          <img src="images/typescript.png" class="services-img">
           <p>
-           Sass facilitates you to write clean, easy and less CSS in a programming construct. It contains fewer codes so you can write CSS quicker.</p>  
+            TypeScript is a strongly typed programming language that builds on JavaScript, giving you better tooling at any scale.</p>  
  </div>
   </div>
   </div>
@@ -177,7 +177,7 @@
                 <div class="card">
                     <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
                     <div class="card-body">
-                      <h1 class="card-name">OOP</h1>
+                      <h1 class="card-name">WeatherApp TS</h1>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                         <div class="text-center">
                             <a href="#" class="button">Link</a>
@@ -190,8 +190,8 @@
                 <div class="card portfolioContent">
                     <img class="card-img-top" src="images/list.png" alt="Card image" style="width:100%">
                     <div class="card-body">
-                      <h1 class="card-name">Task List DOM</h1>
-                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                      <h1 class="card-name">To do List DOM</h1>
+                        <p class="card-text">To do list to help organize your day.</p>
                         <div class="text-center">
                             <a href="todopage.html" class="button">Link</a>
                         </div>
@@ -201,12 +201,12 @@
 
             <div class="col-lg-4 mt-4">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage3.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="images/car.png" alt="Card image" style="width:100%">
                     <div class="card-body">
-                      <h1 class="card-name">TSI</h1>
+                      <h1 class="card-name">F1 Quiz app OOP</h1>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                         <div class="text-center">
-                            <a href="#" class="button">Link</a>
+                            <a href="quizpage.html" class="button">Link</a>
                         </div>
                     </div>
                 </div>
@@ -219,7 +219,7 @@
                     <img class="card-img-top" src="images/book.png" alt="Card image" style="width:100%">
                     <div class="card-body">
                       <h1 class="card-name">Google Book API</h1>
-                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <p class="card-text">an API i made to be able to search for the wanted Book.</p>
                         <div class="text-center">
                             <a href="bookspage.html" class="button">open</a>
                         </div>
@@ -231,8 +231,8 @@
                 <div class="card portfolioContent">
                     <img class="card-img-top" src="images/snake.png" alt="Card image" style="width:100%">
                     <div class="card-body">
-                      <h1 class="card-name">snake</h1>
-                        <p class="card-text">i made a snake game using js.</p>
+                      <h1 class="card-name">snake Game</h1>
+                        <p class="card-text">basic snake game i made using java script.</p>
                         <div class="text-center">
                             <a href="sna" class="button">play</a>
                         </div>
@@ -245,7 +245,7 @@
                     <img class="card-img-top" src="images/cards.png" alt="Card image" style="width:100%">
                     <div class="card-body">
                         <h1 class="card-name">Memory Game</h1>
-                        <p class="card-text">i made a Memory Game using js.</p>
+                        <p class="card-text">dark academia memory game.</p>
                         <div class="text-center">
                             <a href="memorypage.html" class="button">play</a>
                         </div>
@@ -271,20 +271,21 @@
   </section>
 
 <!--footer-->
+
 <section id="footer">
   <img src="images/wave2.png" class="footer-img" >
-  <div class="container">
+  <div class="container p-4">
     <div class="row">
-  <div class="cool-md-4 footer-box">
+  <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
     <img src="images/icon.png">
-    <p><b>Contact Me</b></p>
-    <p>world  Trad center sdsd sdsdsd</p>
-    <p>world  Trad center sdsd sdsdsd</p>
-    <p>world  Trad center sdsd sdsdsd</p>
+    <p><b>Contact Me ✧</b></p>
+    <p>feel free to contact in any platform</p>
+    <p>thanks you ⋆ ˚｡⋆୨୧˚</p>
+    
   </div>
   
  
-  <div class="cool-md-4 footer-box">
+  <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
     <p><b>Email me ☆</b></p>
    
     <input type="email" class="form-control" placeholder="Your email">
@@ -295,6 +296,7 @@
   </div>
   </div>
   <hr>
+  
   <div class="footer-copyright">
     <div class="container">
     <div class="row">
