--- a/quizpage.html
+++ b/quizpage.html
@@ -24,12 +24,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
-
-    <title>SnakeGame</title>
+  <script src="memory.js"></script>
+    <title>Quiz App</title>
   </head>
 
   <body>
-    <script src="snake.js"></script>
      <!---header---->
     <header id="nav-bar">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -41,16 +40,16 @@
   <div class="row">
   <div class="col-md-6">
     <span class="box">
-  <h1 class="main-title">Snake <span class="name-color">Game</span></h1>
+  <h1 class="main-title"> <span style="color: red;">F1</span>  Quiz <span class="name-color">App</span></h1>
 </span>
   <p class="p-1"> | create stuff sometimes.</p>
 
   <p class="p-2"> i'm  a web developer, i have a passion in full-stack development, artificial intelligence, Human computer interaction and etc. </p>
  
  
-  <a href="project1(snakegame)/snake.html" class="intro-button">
-    <button class="button" onclick="this" value="">
-      <img src="images/snake.png" class="img-2" >
+  <a href="project5(QuizApp)/quiz.html" class="intro-button">
+    <button class="button">
+      <img src="images/red car.png" class="img-2" >
       project</button>
   </a> 
   &nbsp
@@ -67,7 +66,7 @@
 
 </div>
 <div class="col-md-6 text-center" class="img-fluid">
-  <img src="images/snake.png" class="img-fluid">
+  <img src="images/red car.png" class="img-fluid">
  </div>
 </div>
 </div>
