--- a/snakepage.html
+++ b/snakepage.html
@@ -55,7 +55,8 @@
   </a> 
   &nbsp
 
-  <a href="snake.zip" class="intro-button">
+  <a href = "project1(snake).zip"
+      Download = "snake-file">
     <input type="button" value="filles" class="button"
     >
 
