--- a/chatApppage.html
+++ b/chatApppage.html
@@ -55,7 +55,8 @@
   </a> 
   &nbsp
 
-  <a href="snake.zip" class="intro-button">
+  <a href = "project6(chatAPP).zip"
+      Download = "chat-file">
     <input type="button" value="filles" class="button"
     >
 
