final js project

--- a/chatApppage.html
+++ b/chatApppage.html
@@ -43,9 +43,8 @@
     <span class="box">
   <h1 class="main-title"><span class="name-color">chat </span> APP</h1>
 </span>
-  <p class="p-1"> | create stuff sometimes.</p>
+  <p class="p-1"> | chat app i made using Type Script.</p>
 
-  <p class="p-2"> i'm  a web developer, i have a passion in full-stack development, artificial intelligence, Human computer interaction and etc. </p>
  
  
   <a href="project6(chatAPP)/chat.html" class="intro-button">
