--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <img class="card-img-top" src="images/chat.png" alt="Card image" style="width:100%">
                     <div class="card-body">
                       <h1 class="card-name">Chat App </h1>
-                        <p class="card-text">app i made with js to chat with people.</p>
+                        <p class="card-text">app i made with Type Script to chat with people.</p>
                         <div class="text-center">
                             <a href="chatApppage.html" class="button">Open</a>
                         </div>
