--- a/memorypage.html
+++ b/memorypage.html
@@ -42,7 +42,7 @@
     <span class="box">
   <h1 class="main-title">Memory <span class="name-color">Game</span></h1>
 </span>
-  <p class="p-1"> | dark academia memory game.</p>
+  <p class="p-1"> | dark academia inspired memory game.</p>
 
   
  
